i ahve face error on js file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <br>
 
-        <button id="button" type="submit" onclick="remainingBirthday()" >Submit</button>
+        <button id="button" onclick="remainingBirthday()" >Submit</button>
 
     </form> 
 
@@ -85,6 +85,6 @@
         <a href="https://www.github.com/MKQazi786">Github</a>
     </footer>
 
-    <script src="birthday.js" ></script>
+    <script type="module" src="birthday.js" ></script>
 </body>
 </html>
