i have chnages somethings in my file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <title>es6 remaining birthday</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>es6 remaining birthday assignment</h1>
 
-    <form class="form" ; return false >
-       <p> Which date do you have born? </p>
+    <form class="form">
+        <p> Which date do you have born? </p>
         <select name="month" id="month">
             <option value="January">January</option>
             <option value="February">February</option>
@@ -26,7 +28,6 @@
             <option value="November">November</option>
             <option value="December">December</option>
         </select>
-
         <select name="date" id="date">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -64,19 +65,19 @@
 
         <br>
 
-        <button id="button" onclick="remainingBirthday()" >Submit</button>
+        <button id="button" onclick="remainingBirthday()">Submit</button>
 
-    </form> 
+    </form>
 
-    <hr> 
+    <hr>
 
     <div id="result">
 
         <h2>Time remaining in your birthday</h2>
 
         <hr>
-        
-        <p id="title" ></p>
+
+        <p id="title"></p>
 
     </div>
 
@@ -85,6 +86,7 @@
         <a href="https://www.github.com/MKQazi786">Github</a>
     </footer>
 
-    <script type="module" src="birthday.js" ></script>
+    <script src="birthday.js"></script>
 </body>
+
 </html>
